--- a/templates/postread.html
+++ b/templates/postread.html
@@ -3,13 +3,13 @@
 {% block content %}
 
 
-<h1>View List of Posts</h1>
+<h1>Construction Safety Information Blog Posts</h1>
 
 <div>
     <br>
-    {% for postadd in object_list %}
+    {% for post in object_list %}
     
-    <a href="{% url 'postread' post.pk %}">    
+    <a href="{% url 'postdetail' post.pk %}">    
     {{ post.name | safe }}
     </a>
     
@@ -20,10 +20,8 @@
     <br>
     {{ post.content | safe }}
     <br>
-    {% endfor %}
     
-    </div>
-
-
-
+    {% endfor %}
+    </div> -->
+   
 {% endblock %}
