Add postcreate to blog and crispy forms
Add postcreate view, template and url connect postdetail
template to postcreate template display form on postcreate
page need extra work.  Install crispy forms error -
ModuleNotFoundError fixed - missing comma in settings.py file
after crispy_forms

--- a/templates/postdetail.html
+++ b/templates/postdetail.html
@@ -15,9 +15,13 @@
 <br>
 {{ post.content | safe }}
 <br>
-<a href="{% url 'postread' %}"><button type="button" class="btn btn-warning">Home</button></a>
+<div>
+    <a href="{% url 'postcreate' post.pk %}">Create Post</a> 
+
+</div>
 {% endblock %}
 </div> 
+
 
 
 
