--- a/templates/postcreate.html
+++ b/templates/postcreate.html
@@ -1,13 +1,40 @@
-<!-- {% extends "base.html" %}
+{% extends "base.html" %}
 
 {% block content %}
 
-
-<h1>Add Post</h1>
+<h1>Construction Safety Information Blog - Create Post</h1>
+<!-- <h1>Add Post</h1>
 {% for postadd in object_list %}
   <ul>
     <li><a href="{{ postadd.get_absolute_url }}">{{ postadd.name }}</a></li>
   </ul>
-{% endfor %}
+{% endfor %} -->
+<!-- 
+<div> -->
+  <div>
+  <a href="{% url 'postread' %}">    
+  {{ post.name | safe }}</a>
+  <br>
+  {{ post.slug | safe }}
+  <br>
+  {{ post.contributor| safe  }}
+  <br>
+  {{ post.date | safe }}
+  <br>
+  {{ post.image | safe }}
+  <br>
+  {{ post.content | safe }}
+  <br>
+  {{ post.excerpt | safe }}</a>
 
-{% endblock %} -->
+  <form method="post">
+
+    {% csrf_token %}
+    {{ form.as_p }}
+
+  <input type="submit" value="Submit" />
+
+  </form>
+  <br>
+</div> 
+  {% endblock %}
