Add Post Update
Add Post Update and resolved ImportError for PostUpdate
code was incorrectly indented

--- a/templates/postdetail.html
+++ b/templates/postdetail.html
@@ -17,6 +17,8 @@
 <br>
 <div>
     <a href="{% url 'postcreate' post.pk %}">Create Post</a> 
+    <a href="{% url 'postupdate' post.pk %}">Update Post</a> 
+
 
 </div>
 {% endblock %}
