Add deletepost and resolve errors
Added deletepost functionality, in installing same resolved
TemplateSyntaxError in postdelete.html and No Reverse Match
in views.py file under postdelete

--- a/templates/postdelete.html
+++ b/templates/postdelete.html
@@ -7,7 +7,9 @@
 
 <form method="post">
     {% csrf_token %}
-    Are you sure you want to delete "{{ object }}"
-    
-
+    Are you sure you want to delete "{{ object }}" ?
+    <input type="Submit" value="Submit">
 </form>
+
+
+{% endblock %}
