--- a/templates/postdetail.html
+++ b/templates/postdetail.html
@@ -18,6 +18,7 @@
 <div>
     <a href="{% url 'postcreate' post.pk %}">Create Post</a> 
     <a href="{% url 'postupdate' post.pk %}">Update Post</a> 
+    <a href="{% url 'postdelete' post.pk %}">Delete Post</a> 
 
 
 </div>
