--- a/templates/postupdate.html
+++ b/templates/postupdate.html
@@ -36,5 +36,14 @@
 
   </form>
   <br>
+
+  {% if user.is_authenticated %}
+  <h1>Welcome to the Construction Safety and Information Blog</h1>
+  <a href="logout">logout</a>
+  {% else %}
+  <a href="Login">Login</a>
+  <a href="Sign Up">Sign Up</a>
+    
+ {% endif %}
 </div> 
   {% endblock %}
