--- a/templates/postread.html
+++ b/templates/postread.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 
+
+
 {% block content %}
+<h5>List of Recent Blog Posts</h5>
 
 
-<h1>Construction Safety Information Blog Posts</h1>
 
 <div>
     <br>
