--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1>Construction Safety Information Blog - Login </h1>
+<h1>Construction Safety Information Blog - Sign-up  </h1>
 
 <div class="form-group">
   <form method="POST">
