Add Home Login and Register functionality
Add code for home to the home link in base html,
add code for login to login link in base html, added
view for login in views file and url changed code in login
html template to accommodate same.  Added code for signup
to the signup link in the base html page, added view for signup
and also added url.  In creating these views fixed bugs in
realtion to No reverse match and page not found errors

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,13 +45,13 @@
         <form class="d-flex">
           <ul class="navbar-nav me-auto mb-2 mb-lg-4">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="{% url 'postread' %}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Login</a>
+              <a class="nav-link" href="{% url 'login' %}">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Register</a>
+              <a href="{% url 'signup' %}">Sign Up</a>
             </li>
             
           </ul>
@@ -71,9 +71,13 @@
      <a href="logout">logout</a>
      {% else %}
      <a href="Login">Login</a>
-     <a href="Sign Up">Sign Up</a>
+     <a href="{% url 'signup' %}">Sign Up</a>
       {% endif %}
     
+
+       
+
+
    
 </div>
 
