--- a/templates/postread.html
+++ b/templates/postread.html
@@ -5,7 +5,9 @@
 {% block content %}
 <h5>List of Recent Blog Posts</h5>
 
-
+<!-- <li class="nav-item">
+    <a href="{% url 'signup' %}">Sign Up</a>
+  </li> -->
 
 <div>
     <br>
