--- a/templates/base.html
+++ b/templates/base.html
@@ -32,20 +32,23 @@
       
         <form class="d-flex">
           <ul class="navbar-nav me-auto mb-2 mb-lg-4">
+<!-- 
+          {% if user.is_authenticated %}
+            Welcome {{ 'user.first_name' }} -->
+            <!-- <a href="{% url 'logout' %}">logout</a>       -->
 
-            {% if user.is_authenticated %}
-            Welcome {{ 'user.first_name' }}
-            <a href="{% url 'logout' %}">logout</a>
-           
+            <!-- {% else %}
+            <p>You are not logged in</p> -->
+            <!-- <a href="{% url 'login' %}">Log in</a>
+            <a href="{% url 'signup' %}">Sign Up</a> -->
 
-            {% else %}
-            <p>You are not logged in</p>
-            <a href="{% url 'login' %}">Log in</a>
-            <a href="{% url 'signup' %}">Sign Up</a>
+            <!-- {% endif %} -->
+<!--            -->
+               
 
-            {% endif %}
-<!--           
-            <li class="nav-item">
+
+
+            <!-- <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{% url 'postread' %}">Home</a>
             </li>
             <li class="nav-item" >
@@ -56,7 +59,30 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+            </li> -->
+
+            {% if user.is_authenticated %}
+            <li>Welcome {{ user.first_name }}</li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'postread' %}">Home</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+            </li> 
+            {% else %}
+            <li class="nav-item" >
+              <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'postread' %}">Home</a>
+            </li>
+
+           {% endif %}
+
+
             
           </ul> -->
           <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
