--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,7 +11,7 @@
     {{ form.as_table }}
   
     <li class="nav-item">
-        <a href="{% url 'postread' %}">Sign Up</a>
+        <a href="{% url 'login' %}">Sign Up</a>
       </li>
   </form>
 </div>
