Work on login success message

--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -4,7 +4,22 @@
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
+
+
+
 {% block content %}
+
+<!-- {% if messages %}
+<div class="alert alert-success" role="alert">
+  {% for message in messages %}
+  {% Your registration was successful %}<br/>
+  {% endfor %}
+</div>
+
+{% endif %} -->
+
+
+
 <h1>{% trans "Sign Up" %}</h1>
 
 <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
