--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,7 +7,14 @@
 
 {% block content %}
 
-<h1>{% trans "Sign In" %}</h1>
+<!-- {% if messages %}
+  {% for message in messages %}
+  <p>
+    {{ message }}
+  </p>
+  {% endfor %}
+  {% endif %} -->
+  <h1>{% trans "Sign In" %}</h1>
 
 {% get_providers as socialaccount_providers %}
 
