Deleted oringal login logout and signup
Original html files for login logout and signup deleteted
as django allauth has now provided these templates
provisionally added a messages.html file which may help
in displaying messages changed code in view and postcreate
added code from the files deleted above to the html templates
that were created by django allauth just in case i might be missing
any code but its commented out for the moment in each file

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -51,3 +51,28 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 </form>
 
 {% endblock %}
+
+
+
+<!--Taken from orignal login file now deleted  {% extends "base.html" %}
+
+{% block content %}
+
+<h1>Construction Safety Information Blog - Login </h1>
+
+<div class="form-group">
+  <form method="POST">
+    {% csrf_token %}
+    {{ form.as_table }}
+  
+      <div>
+      <a href="{% url 'postread' %}">Login</a> 
+ 
+    </div>
+  </form>
+</div>
+
+  
+
+  {% endblock %} -->
+
