--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -19,3 +19,21 @@
 
 
 {% endblock %}
+
+
+<!-- 
+Taken from original logout file now deleted {% extends "base.html" %}
+
+{% block content %}
+
+<h1>Construction Safety Information Blog - You are successfully Logged Out </h1>
+
+<h1>To Login please click Login at the top of this page</h1>
+
+
+
+<a href="{% url 'postread' %}">Home</a> 
+
+
+
+  {% endblock %} -->
