--- a/templates/postcreate.html
+++ b/templates/postcreate.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% include 'messages.html' %}
 {% block content %}
 
 <h1>Construction Safety Information Blog - Create Post</h1>
