--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -5,17 +5,10 @@
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
-{% include 'messages.html' %}
+
 
 {% block content %}
 
-<!-- {% if messages %}
-  {% for message in messages %}
-  <p>
-    {{ message }}
-  </p>
-  {% endfor %}
-  {% endif %} -->
   <h1>{% trans "Sign In" %}</h1>
 
 {% get_providers as socialaccount_providers %}
@@ -31,6 +24,8 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
     {% include "socialaccount/snippets/provider_list.html" with process="login" %}
   </ul>
 
+ 
+
   <div class="login-or">{% trans 'or' %}</div>
 
 </div>
@@ -41,15 +36,20 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 <p>{% blocktrans %}If you have not created an account yet, then please
 <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
 {% endif %}
+<div class="container">
+  {% include 'messages.html' %}
 
 <form class="login" method="POST" action="{% url 'account_login' %}">
   {% csrf_token %}
   {{ form.as_p }}
   {% if redirect_field_value %}
+
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+ 
   {% endif %}
   <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
   <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+  
 </form>
-
+</div>
 {% endblock %}
