--- a/templates/base.html
+++ b/templates/base.html
@@ -61,8 +61,10 @@
               <a class="nav-link" href="{% url 'logout' %}">Logout</a>
             </li> -->
 
+            {% include 'messages.html' %}
+            
             {% if user.is_authenticated %}
-            <li>Welcome {{ user.first_name }}</li>
+            <li>Welcome {{ user.username }}</li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{% url 'postread' %}">Home</a>
             </li>
