--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -15,6 +15,7 @@
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
   <button type="submit">{% trans 'Sign Out' %}</button>
+  <!-- {% include 'messages.html' %} -->
 </form>
 
 
