--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-{% include 'messages.html' %}
+
 
 <h1>{% trans "Sign Up" %}</h1>
 
@@ -19,6 +19,7 @@
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
   <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+  <!-- {% include 'messages.html' %} -->
 </form>
 
 {% endblock %}
