--- a/templates/messages.html
+++ b/templates/messages.html
@@ -1,20 +1,26 @@
-{% load i18n %}
-
-
+<!-- {% load i18n %} -->
+<html>
+<head>
+<title>Messages</title>
+</head>
+</body>
 {% if messages %}
 <div class="messages">
     {% for message in messages %}
-    <div{% if message.tags %} class="alert alert-sm alert-{{ message.tags }}"{% endif %}>
-        {{ message }}
+    <div{% if message.tags %} class="alert alert-sm alert-{{ message.tags }}" id="mess" {% endif %}>
+        {{ message | safe  }}
     </div>
     {% endfor %}"
 </div>
 {% endif %}
+</body>
 
 <script>
     setTimeout(function () {
-        let messages = document.getElementById("msg");
+        let messages = document.getElementById("mess");
         let alert = new bootstrap.Alert(messages);
         alert.close();
     }, 3000);
 </script>
+
+</html>
