--- a/templates/base.html
+++ b/templates/base.html
@@ -60,17 +60,19 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'logout' %}">Logout</a>
             </li> -->
-
+            <div>
           {% if messages %}
           <div class="messages">
               {% for message in messages %}
-              <div{% if message.tags %} class="alert alert-sm alert-{{ message.tags }}" id="mess" {% endif %}>
+              {% if message.tags %}
+              <div class="alert alert-sm alert-{{ message.tags }}" id="mess" {% endif %}>
                   {{ message | safe  }}
               </div>
               {% endfor %}"
           </div>
           {% endif %}
-      
+        </div>
+        <div>
             {% if user.is_authenticated %}
             <li>Welcome {{ user.username }}</li>
             <li class="nav-item">
@@ -89,10 +91,9 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{% url 'postread' %}">Home</a>
             </li>
-
            {% endif %}
 
-
+            </div>
             
           </ul> -->
           <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
