Update Comment Form
In form.py CommentForm updated fields that needed to be
displayed also updated labels and widgets, update csiblog url
to display commentadd, changed original commentaddview to
commentview and added a new commentaddview to views.py.
Commentadd detleted unwanted code and added link to postread.
Postcreate changed form from as_table to as_p as it was
not displaying correctly on page. postdetail added commentadd
links

--- a/templates/commentadd.html
+++ b/templates/commentadd.html
@@ -6,10 +6,12 @@
 <h3>Add Comment</h3>
 <form method="post">
     {% csrf_token %}
+   
+    {{ form.as_p }}
     
     <input type="Submit" value="Submit">
-    <!-- {% include 'messages.html' %} -->
+ 
 </form>
-
+<a href="{% url 'postread' %}"> 
 
 {% endblock %}
