--- a/templates/postcreate.html
+++ b/templates/postcreate.html
@@ -31,10 +31,10 @@
   <form method="post">
 
     {% csrf_token %}
-    {{ form.as_table }}
+    {{ form.as_p }}
     
   <input type="submit" value="Submit"/>
-  <!-- {% include 'messages.html' %} -->
+
 
   </form>
   <br>
