Add Comment functionality
General changes moved code datehierarchy up in code
in admin.py. In forms.py added commentupdate form,
also made some changes to comment form.  Added path
for commentupdate in urls.p.  Added view in views.py
for commentupdate. Added commentupdate template and
added commentupdate button to postdetail page.

--- a/templates/postdetail.html
+++ b/templates/postdetail.html
@@ -37,6 +37,7 @@
        {% else %}
        <br>
        <a href="{% url 'commentadd' post.pk %}">Add Comment </a>
+       <a href="{% url 'commentupdate' post.pk %}">Update Comment </a>
        <br>
 
             {% for comment in post.csiblog_comment.all %}
@@ -56,6 +57,7 @@
 </div>
 <br>
 <a href="{% url 'commentadd' post.pk %}">Add Comment </a>
+<a href="{% url 'commentupdate' post.pk %}">Update Comment </a>
 <br>
 {% endblock %}
 
