Update Category Model
In admin.py update category admin details.  In forms.py
added a new CategoryAdd form updated CommentUpdateForm,
CommentForm and PostForm.  In models.py updated category,
comment and post model. In urls.py added paths for
categoryadd, categoryview and categorydelete.  In views.py
added category add, delete, view and update views. Add link
for add categories in base.html file.  Added html templates
for categoryadd, categorydelete and categoryview.

--- a/templates/base.html
+++ b/templates/base.html
@@ -81,6 +81,10 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
             </li> 
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'categoryview' %}">View Categories</a>
+            </li>
+            
             {% else %}
             <li class="nav-item" >
               <a class="nav-link" href="{% url 'account_login' %}">Login</a>
@@ -90,6 +94,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{% url 'postread' %}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'categoryview' %}">Home</a>
             </li>
            {% endif %}
 
