--- a/templates/postcreate.html
+++ b/templates/postcreate.html
@@ -35,11 +35,13 @@
 
 
     {{ form.as_p }}
+    <div>
     
-  <input type="submit" value="Submit"/>
-
+      <input type="submit" value="Submit"/>
+    </div>
 
   </form>
+ 
   <br>
 </div> 
   {% endblock %}
