--- a/templates/postupdate.html
+++ b/templates/postupdate.html
@@ -33,7 +33,7 @@
     {{ form.as_p }}
 
   <input type="submit" value="Submit" />
-  <!-- {% include 'messages.html' %} -->
+  <a href="{% url 'postread' %}"> 
 
   </form>
   <br>
