Work on Category functionality

--- a/templates/categoryview.html
+++ b/templates/categoryview.html
@@ -20,8 +20,8 @@
     {% endfor %}
  
     <a href="{% url 'categoryadd' %}">Add Category</a>  
-    <a href="{% url 'categorydelete' post:pk %}">Delete Category</a>
-    <a href="{% url 'postread' %}">Home</a>
+    <a href="{% url 'categorydelete' %}">Delete Category</a>
+    <a href="{% url 'categoryview' %}">Home</a>
 
 
         
