--- a/templates/categoryadd.html
+++ b/templates/categoryadd.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+<!-- {% extends "base.html" %}
 
 {% block content %}
 
@@ -15,4 +15,4 @@
 <a href="{% url 'categoryview' %}">  
 <a href="{% url 'postread' %}"> 
 
-{% endblock %}
+{% endblock %} -->
