--- a/templates/postcreate.html
+++ b/templates/postcreate.html
@@ -15,7 +15,7 @@
   <a href="{% url 'postread' %}">    
     {{ post.name | safe }}</a>
     <br>
-    {{ post.slug | safe }}
+    <!-- {{ post.slug | safe }}
     <br>
     {{ post.contributor| safe  }}
     <br>
@@ -23,7 +23,7 @@
     <br>
     {{ post.image | safe }}
     <br>
-    {{ post.content | safe }}
+    {{ post.content | safe }} -->
     <br>
    </a>
 
