--- a/templates/postdelete.html
+++ b/templates/postdelete.html
@@ -2,15 +2,22 @@
 
 {% block content %}
 
-<h1>Construction Safety Information Blog - Create Post</h1>
+<h1>Construction Safety Information Blog</h1>
+<h3>Delete Post</h3>
 
+{% if user.is_authenticated %}
+{% if user.id == post.contributor.id %}
 
 <form method="post">
+
     {% csrf_token %}
     Are you sure you want to delete "{{ object }}" ?
-    <input type="Submit" value="Submit">
- 
-</form>
 
+    <input type="Submit" value="Submit">
+  {% else %}
+  Please  not allowed to perform this action.  
+</form>
+{% endif %}
+{% endif %}
 
 {% endblock %}
