--- a/templates/base.html
+++ b/templates/base.html
@@ -29,9 +29,10 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      
+      current user: {{ post.contributor.id}}
         <form class="d-flex">
           <ul class="navbar-nav me-auto mb-2 mb-lg-4">
+           
 <!-- 
           {% if user.is_authenticated %}
             Welcome {{ 'user.first_name' }} -->
