--- a/templates/likes.html
+++ b/templates/likes.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+<!-- {% extends "base.html" %}
 
 {% block content %}  
 
@@ -14,4 +14,4 @@
 
 
  
-{% endblock %}  
+{% endblock %}   -->
