fix comment form

--- a/templates/postdetail.html
+++ b/templates/postdetail.html
@@ -31,7 +31,12 @@
         {% endif %}
   
    <hr> 
+ 
+
     <h2>Comment On The Post Above....</h2>
+
+    {% if user.is_authenticated %}
+    {% if user.id == post.contributor.id %}
 
         {% if not post.csiblog_comment.all %}
         No Comments Added As Of Yet    
@@ -55,4 +60,9 @@
     <a href="{% url 'commentupdate' post.pk %}">Update Comment </a>
     <a href="{% url 'commentdelete' post.pk %}">Update Comment </a>
 <br>
+{% endif %}
+{% else %}
+<a href="{% url 'postread' %}">Home</a>  
+{% endif %}
+
 {% endblock %}   
