--- a/templates/postread.html
+++ b/templates/postread.html
@@ -1,30 +1,31 @@
 {% extends "base.html" %}
 
-
-
 {% block content %}
-<h5>List of Recent Blog Posts</h5>
 
+{% block title %}<h3>List of Blog Posts</h3>{% endblock %} 
 
 <div>
     <br>
     {% for post in object_list %}
-    
+    <strong>
     <a href="{% url 'postdetail' post.pk %}">    
     {{ post.name | safe }}  
     </a>
-    
+    </strong>
     <br>
+    <strong>
     {{ post.contributor| safe }}  &nbsp; 
+    </strong>
     <br>
-    
+    <strong>
     {{ post.date | safe }}  &nbsp;
+    </strong>
     <br>
+    {{ post.image | safe }}  &nbsp;
     <br>
     <p>{{ post.content | slice:":400" | safe }}...</p> 
     <br>
     <hr>
-  
     {% endfor %}
  
 
