--- a/templates/base.html
+++ b/templates/base.html
@@ -33,17 +33,17 @@
         <form class="d-flex">
           <ul class="navbar-nav me-auto mb-2 mb-lg-4">
            
-<!-- 
-          {% if user.is_authenticated %}
-            Welcome {{ 'user.first_name' }} -->
-            <!-- <a href="{% url 'logout' %}">logout</a>       -->
 
-            <!-- {% else %}
+          {% if user.is_authenticated %}
+            Welcome {{ 'user.first_name' }}
+            <a href="{% url 'logout' %}">logout</a>   
+
+          {% else %}
             <p>You are not logged in</p> -->
-            <!-- <a href="{% url 'login' %}">Log in</a>
+          <a href="{% url 'login' %}">Log in</a>
             <a href="{% url 'signup' %}">Sign Up</a> -->
 
-            <!-- {% endif %} -->
+      {% endif %}
 <!--            -->
                
 
